<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">



    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="#8000FF"
        android:textColor="@android:color/white"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/etNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_preta"
        android:padding="14dp"
        app:layout_constraintTop_toBottomOf="@id/tvNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        app:layout_constraintTop_toBottomOf="@id/etNome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_preta"
        android:padding="14dp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/tvTelefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        app:layout_constraintTop_toBottomOf="@id/etTelefone"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_preta"
        android:padding="14dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/cbReceberEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingressar_na_lista_de_e_mails"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        app:layout_constraintTop_toBottomOf="@id/cbReceberEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvSexo"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            android:text="@string/masculino"/>

        <RadioButton
            android:id="@+id/rbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.5"
            android:text="@string/feminino"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        app:layout_constraintTop_toBottomOf="@id/rgSexo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etCidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_preta"
        android:padding="14dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvCidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        app:layout_constraintTop_toBottomOf="@id/etCidade"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <Spinner
        android:id="@+id/spEstado"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:entries="@array/estados_brasil"
        android:background="@drawable/borda_preta"
        app:layout_constraintTop_toBottomOf="@id/tvEstado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:background="#8000FF"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/spEstado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button4"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginEnd="4dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/limpar"
        android:background="#8000FF"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/spEstado"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginStart="4dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>